tests/baselines/reference/defaultDeclarationEmitShadowedNamedCorrectly.errors.txt
this.ts(14,5): error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.


==== this.ts (1 errors) ====
    import * as me from "./this";
    export interface Things<P, T> {
        p: P;
        t: T;
    }
    export function make<P, CTor>(x: { new (): CTor & {props: P} }): Things<P, CTor> {
        return null as any;
    }
    
    export interface Props {
    }
    
    export default class MyComponent {
        props: Props;
        ~~~~~
!!! error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.
    }
    export namespace Something {
        let MyComponent = 2; // Shadow declaration, so symbol is only usable via the self-import
        export const create = make(me.default);
    }